--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -4,7 +4,9 @@ name: Pytest
 ## Set the trigger policy.
 ## In this case, the workflow is execute on a `push` event,
 ## or when a new commit is pushed to the repository
-on: [push]
+on:
+  push:
+      branches: [mas] # [ main ]
 
 ## List the steps to be executed by the workflow
 jobs:
