--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -23,8 +23,16 @@ jobs:
     - name: check verzion
       run: |
         python --version
-        python "print(good job..)"
-    - name: test pytest staff
+    - name: install pyinstaller
       run: |
-        pytest  
-  
+        python -m pip install --upgrade pip  
+        pip install  pyinstaller
+        
+    - name: build and compiled
+      run: |
+        python -m pyinstaller app.py
+        
+    - name: check windows builded
+      run: |
+        dir 
+        dir build        
