--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -35,11 +35,15 @@ jobs:
     - name: check windows builded
       run: |
         dir 
-        dir build      
-    - name: Commit changes
-      uses: EndBug/add-and-commit@v7
-      with:
-        author_name: MrMR
-        author_email: MrMR@example.comMrMR
-        message: 'tsting commit action and push'
-        add: 'build/*'
+        dir build
+    - name: test inno
+      run: |
+        "%programfiles(x86)%\Inno Setup 6\iscc.exe" "/?"
+      shell: cmd
+    #- name: Commit changes
+     # uses: EndBug/add-and-commit@v7
+      #with:
+       # author_name: MrMR
+        #author_email: MrMR@example.comMrMR
+        #message: 'tsting commit action and push'
+        #add: 'build/*'
