--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -36,9 +36,9 @@ jobs:
       run: |
         dir 
         dir build
-    - name: test inno
+    - name: create innosetup
       run: |
-        "%programfiles(x86)%\Inno Setup 6\iscc.exe" "/?"
+        "%programfiles(x86)%\Inno Setup 6\iscc.exe" ".\innoswork.iss"
       shell: cmd
     #- name: Commit changes
      # uses: EndBug/add-and-commit@v7
