--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -28,10 +28,14 @@ jobs:
         python -m pip install --upgrade pip  
         pip install  pyinstaller
         
+    - name: delete old compiled build
+      run: |
+        rd /s /q ".\build"
+      shell: cmd
     - name: build and compiled
       run: |
         pyinstaller app.py
-        
+      
     - name: check windows builded
       run: |
         dir 
@@ -40,10 +44,10 @@ jobs:
       run: |
         "%programfiles(x86)%\Inno Setup 6\iscc.exe" ".\innoswork.iss"
       shell: cmd
-    #- name: Commit changes
-     # uses: EndBug/add-and-commit@v7
-      #with:
-       # author_name: MrMR
-        #author_email: MrMR@example.comMrMR
-        #message: 'tsting commit action and push'
-        #add: 'build/*'
+    - name: Commit changes
+      uses: EndBug/add-and-commit@v7
+      with:
+        author_name: MrMR
+        author_email: MrMR@example.comMrMR
+        message: 'tsting commit action and push'
+        add: 'releases/*'
