--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -51,3 +51,48 @@ jobs:
         author_email: MrMR@example.comMrMR
         message: 'tsting commit action and push'
         add: 'releases/*'
+
+  test-python-version-7:
+    ## Configure the operating system the workflow should run on.
+    ## In this case, the job on Windows
+    runs-on: windows-2016
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.7' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+        architecture: 'x86' # optional x64 or x86. Defaults to x64 if not specified
+    - name: test windows staff
+      run: |
+        dir  
+    - name: check verzion
+      run: |
+        python --version
+    - name: install pyinstaller
+      run: |
+        python -m pip install --upgrade pip  
+        pip install  pyinstaller
+        
+    - name: delete old compiled build
+      run: |
+        rd /s /q ".\build"
+      shell: cmd
+    - name: build and compiled
+      run: |
+        pyinstaller app.py
+      
+    - name: check windows builded
+      run: |
+        dir 
+        dir build
+    - name: create innosetup
+      run: |
+        "%programfiles(x86)%\Inno Setup 6\iscc.exe" ".\innoswork.iss"
+      shell: cmd
+    - name: Commit changes
+      uses: EndBug/add-and-commit@v7
+      with:
+        author_name: MrMR
+        author_email: MrMR@example.comMrMR
+        message: 'tsting 2016 commit action and push'
+        add: 'releases/*'
