--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -87,7 +87,7 @@ jobs:
         dir build
     - name: create innosetup
       run: |
-        "%programfiles(x86)%\Inno Setup 6\iscc.exe" ".\innoswork.iss"
+        "%programfiles(x86)%\Inno Setup 6\iscc.exe" /F"setupwin2016" ".\innoswork.iss"
       shell: cmd
     - name: Commit changes
       uses: EndBug/add-and-commit@v7
