--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -78,6 +78,7 @@ jobs:
         pip install  pyinstaller
     - name: pull changes
       run: |
+        git pull
         
     - name: delete old compiled build
       run: |
