--- a/.github/workflows/testbuild.yml
+++ b/.github/workflows/testbuild.yml
@@ -62,6 +62,8 @@ jobs:
     runs-on: windows-2016
     steps:
     - uses: actions/checkout@v2
+      with:
+        ref: "main"
     - uses: actions/setup-python@v2
       with:
         python-version: '3.7' # Version range or exact version of a Python version to use, using SemVer's version range syntax
@@ -76,9 +78,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip  
         pip install  pyinstaller
-    - name: pull changes
-      run: |
-        git pull
+    #- name: pull changes
+      #run: |
+        #git pull
         
     - name: delete old compiled build
       run: |
